# jetpax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  Rocket.toml  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: nav.json
docs/cli/: overview.md
docs/concepts/: service-managers.md
docs/configuration-objects/: service.md
docs/guides/: getting-started.md
docs/internals/: architecture.md
docs/ui/: keyboard-shortcuts.md
migrations/20190312000000_create_workspaces/: up.sql
src/: api_client.rs  main.rs  schema.rs
src/Cli/: run-cli.ts
src/Cli/API/: ServerApiHttp.ts  api.ts
src/Cli/ArgumentParsing/: ArgsAndFlags.ts  splitArgs.test.ts  splitArgs.ts
src/Cli/Input/: getConfirmation.ts  getInput.ts  getPassword.ts
src/Cli/Output/: logOnBlack.ts
src/Cli/SubCommands/: Command.ts  GetVersionCommand.ts  HelpCommand.ts  OpenUiCommand.ts  OpenWebUiCommand.ts  ServerStatusCommand.ts  StartServerCommand.ts  getCommand.ts  (+3 more)
src/Common/: jetpaxHome.ts  serverLogFilePath.ts  serverPort.ts  serverUrl.ts
src/Server/: makeServer.test.ts  makeServer.ts  run-server.ts  server.test.ts  server.ts
src/commands/: down_command.rs  help_command.rs  init_command.rs  mod.rs  status_command.rs  up_command.rs  version_command.rs  web_command.rs
src/output/: mod.rs  print_err_message.rs
src/server/: mod.rs  preflight.rs  start.rs  system_state.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: App.css  App.tsx  NavBar.css  NavBar.scss  NavBar.tsx  index.scss  index.tsx
(+104 files in other folders)
