[package]
name = "jetpax"
version = "0.7.0"
authors = ["Andy Fleming <andy@andyfleming.com>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "jpx"
path = "src/main.rs"

[dependencies]
colored = { git = "https://github.com/tforgione/colored.git", rev = "ba2074a1ed2e1d4bf85bc021caa15495c9fc57c2" }
daemonize = "0.3.*"
diesel = { version = "1.4.1", features = ["sqlite"] }
diesel_migrations = "1.4.*"
dirs = "1.0.*"
reqwest = "0.9.*"
rocket = "0.4.*"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["json", "serve", "diesel_sqlite_pool"] }
rust-embed = "4.3.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
webbrowser = "0.4.*"
